# tf-keras-vis

./: .gitignore  .travis.yml  CITATION.cff  Dockerfile  Dockerfile-gpu  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.conda/: conda_build_config.yaml  meta.yaml
.github/workflows/: python-package-TF2.15.yml  python-package-TF2.17.yml  python-package-TF2.5.yml  python-package-cron.yml  python-package-nightly.yml  python-package-up-to-TF2.11.yml  python-package-up-to-TF2.5.yml  python-package.yml  python-publish-conda.yml  python-publish.yml  sphinx-publish.yml
docker/: Dockerfile-with-cpu  Dockerfile-with-gpu
dockerfiles/: cpu.Dockerfile  gpu.Dockerfile
docs/: Makefile  change-log.md  conf.py  index.md  license.md  quick-start.md
docs/api/: tf_keras_vis.activation_maximization.callbacks.md  tf_keras_vis.activation_maximization.input_modifiers.md  tf_keras_vis.activation_maximization.md  tf_keras_vis.activation_maximization.regularizers.md  tf_keras_vis.gradcam.md  tf_keras_vis.gradcam_plus_plus.md  tf_keras_vis.layercam.md  tf_keras_vis.md  tf_keras_vis.saliency.md  tf_keras_vis.scorecam.md  tf_keras_vis.utils.md  tf_keras_vis.utils.model_modifiers.md  tf_keras_vis.utils.scores.md
docs/examples/: attentions.ipynb  index.md  visualize_conv_filters.ipynb  visualize_dense_layer.ipynb
examples/: README.md  activation_maximization.ipynb  attention.ipynb  attentions.ipynb  attentions.ipynb:Zone.Identifier  images  sandbox.ipynb  visualize_conv_filters.ipynb  visualize_conv_filters.ipynb:Zone.Identifier  visualize_dense_layer.ipynb  visualize_dense_layer.ipynb:Zone.Identifier
tests/tf-keras-vis/: conftest.py  gradcam_plus_plus_test.py  gradcam_test.py  saliency_test.py  scorecam_test.py  test__init__.py  test_activation_maximization.py  test_gradcam.py  test_gradcam_plus_plus.py  test_saliency.py  test_scorecam.py  tf_keras_vis_test.py
tests/tf-keras-vis/activation_maximization/: activation_maximization_test.py  callbacks_test.py  test__init__with_mixed_precision.py
tests/tf-keras-vis/utils/: scores_test.py  utils_test.py
tests/tf_keras_vis/: attentions_test.py  conftest.py  gradcam_plus_plus_test.py  gradcam_test.py  saliency_test.py  scorecam_test.py  tf_keras_vis_test.py  xcam_test.py
tests/tf_keras_vis/activation_maximization/: activation_maximization_test.py  callbacks_test.py  input_modifiers_test.py
tests/tf_keras_vis/utils/: model_modifiers_test.py  scores_test.py  utils_test.py
tf_keras_vis/: __init__.py  activation_maximization.py  gradcam.py  gradcam_plus_plus.py  layercam.py  saliency.py  scorecam.py
tf_keras_vis/activation_maximization/: __init__.py  callbacks.py  input_modifiers.py  legacy.py  regularizers.py
tf_keras_vis/legacy/: activation_maximization.py
tf_keras_vis/utils/: __init__.py  callbacks.py  input_modifiers.py  losses.py  model_modifiers.py  regularizers.py  scores.py  test.py
