[metadata]
description-file = README.md

[flake8]
exclude =
    .git
    __pycache__
    dist/*
    docker/*
    examples/*
max-line-length = 100
max-complexity = 10

[yapf]
column_limit = 100
spaces_before_comment = 2

[isort]
skip =
    .git
    __pycache__
    dist
    dockerfiles
    examples
    temp

[pyls]
configurationSources = ['flake8']

[tool:pytest]
addopts =
    -v
    --durations=10
    --cache-clear
    --cov=tf_keras_vis/
    --cov-report=term-missing
    --pep8
pep8maxlinelength = 100
pep8maxcomplexity = 10

[coverage:run]
omit =
    */test.py
    tests/*
    __pycache__/*
    tf_keras_vis/utils/callbacks.py
    tf_keras_vis/utils/losses.py

[coverage:report]
exclude_lines =
    continue
    pass
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    version
