[metadata]
description-file = README.md

[flake8]
exclude =
    __pycache__
    .git
    .github
    .ipynb_checkpoints
    .pytest_cache
    .vscode
    dockerfiles
    docs
    examples
max-line-length = 100
max-complexity = 15

[yapf]
based_on_style = pep8
column_limit = 100
spaces_before_comment = 2

[isort]
skip =
    __pycache__
    .git
    .github
    .ipynb_checkpoints
    .pytest_cache
    .vscode
    dockerfiles
    docs
    examples
line_length = 100

[tool:pytest]
addopts =
    -v
    --durations=10
    --cache-clear
    --cov=tf_keras_vis/
    --cov-report=term-missing
    --pycodestyle

[pycodestyle]
max-line-length = 100
exclude = docs/*

[coverage:run]
omit =
    docs/*
    */test.py
    tests/*
    __pycache__/*
    tf_keras_vis/utils/callbacks.py
    tf_keras_vis/utils/losses.py

[coverage:report]
exclude_lines =
    continue
    pass
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    version