[metadata]
description-file = README.md

[flake8]
exclude =
    __pycache__
    .git
    .github
    .ipynb_checkpoints
    .pytest_cache
    .vscode
    dockerfiles
    docs
    examples
max-line-length = 99
max-complexity = 15
docstring-convention = google

[yapf]
based_on_style = pep8
column_limit = 99
spaces_before_comment = 2

[isort]
skip =
    __pycache__
    .git
    .github
    .ipynb_checkpoints
    .pytest_cache
    .vscode
    dockerfiles
    docs
    examples
line_length = 99

[tool:pytest]
addopts =
    -v
    --durations=10
    --cache-clear
    --cov=tf_keras_vis/
    --cov-report=term-missing
    --pycodestyle
env =
    TF_KERAS_VIS_MAX_STEPS=3

[pycodestyle]
max-line-length = 99
exclude = docs/*

[coverage:run]
omit =
    docs/*
    */test.py
    tests/*
    __pycache__/*
    tf_keras_vis/utils/callbacks.py
    tf_keras_vis/utils/losses.py
    tf_keras_vis/utils/input_modifiers.py

[coverage:report]
exclude_lines =
    continue
    pass
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    version
